added email endpoint
