# WalletService/WalletService.Api/Schema/openapi.yaml
@@ -53,6 +53,39 @@ paths:
           description: Internal server error
       security:
         - BearerAuth: []
+  /api/wallets/email/{email}:
+    get:
+      summary: Find Wallet by Email
+      description: Returns a wallet by its email address.
+      operationId: findWalletByEmail
+      tags:
+        - Wallets
+      parameters:
+        - name: email
+          in: path
+          required: true
+          schema:
+            type: string
+            format: email
+      responses:
+        '200':
+          description: Wallet found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WalletSchemaResponse'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Wallet not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '500':
+          description: Internal server error
+      security:
+        - BearerAuth: []
   /api/wallets/{walletId}:
     get:
       summary: Find Wallet
